fix: 使用amd捕获afmf失效的问题 (#151)

--- a/src_assets/windows/assets/apps.json
+++ b/src_assets/windows/assets/apps.json
@@ -3,7 +3,7 @@
   "apps": [
     {
       "name": "Desktop",
-      "image-path": "desktop-alt.png",
+      "image-path": "desktop",
       "exclude-global-prep-cmd": "false",
       "elevated": "",
       "auto-detach": "true",
