fix: 全新升级杂鱼虚拟显示器卸载旧的vdd

--- a/.github/workflows/translate-simple.yml
+++ b/.github/workflows/translate-simple.yml
@@ -92,7 +92,14 @@ jobs:
                       else:
                           masked = mask_terms(content)
                           translated = translate_with_deepseek(masked, lang_name)
-                          translated_content = unmask_terms(translated)
+                          # 去除 DeepSeek 返回的多余提示，只保留 markdown 内容
+                          translated = unmask_terms(translated)
+                          if '```markdown' in translated:
+                              translated_content = translated.split('```markdown',1)[-1]
+                              # 去除结尾的 ```
+                              translated_content = translated_content.replace('```','').strip()
+                          else:
+                              translated_content = translated.strip()
 
                       filename = f'README.{lang_code}.md'
                       with open(filename, 'w', encoding='utf-8') as f:
