--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,4 @@
-custom: ["https://www.ifdian.net/a/qiin2333"]
+custom: [
+  "https://www.ifdian.net/a/qiin2333",
+  "https://www.ifdian.net/a/Yundi339"
+]
